[MM-65662] Fix the bad contrast on the warning indicator on Inputs

--- a/src/renderer/css/components/Input.scss
+++ b/src/renderer/css/components/Input.scss
@@ -10,7 +10,11 @@
 }
 
 .warning {
-    color: var(--away-indicator);
+    color: var(--center-channel-color);
+
+    i {
+        color: var(--away-indicator);
+    }
 }
 
 .success {
